--- a/source/product.html
+++ b/source/product.html
@@ -593,7 +593,7 @@
     <section class="product-page__delivery  product-delivery">
       <div class="product-delivery__content">
         <div class="product-delivery__buttons">
-          <button class="product-delivery__button" type="button">Оплата и доставка</button>
+          <button class="product-delivery__button  js-active" type="button">Оплата и доставка</button>
           <button class="product-delivery__button" type="button">Отзывы</button>
         </div>
         <ul class="product-delivery__list">
