--- a/source/profile.html
+++ b/source/profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Меркурий-Интер-Лаб: Контакты</title>
+    <title>Меркурий-Интер-Лаб: Оформление заказа</title>
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
     <link href="img/favicon.png" rel="icon">
   </head>
@@ -284,227 +284,83 @@
       </section>
     </header>
 
-    <main class="page__contacts contacts-page">
-      <div class="contacts-page__breadcrumbs  breadcrumbs">
+    <main class="page__profile profile">
+      <div class="profile__breadcrumbs  breadcrumbs">
         <div class="breadcrumbs__content">
           <a class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link  breadcrumbs__link--active">Контакты</a>
+          <a class="breadcrumbs__link  breadcrumbs__link--active">Оформление заказа</a>
         </div>
       </div>
 
-      <section class="contacts-page__contacts  contacts-table">
-        <div class="contacts-table__content">
-          <h2 class="contacts-table__heading">Наши контакты</h2>
-          <table>
-            <tbody class="contacts-table__body">
-              <tr>
-                <td>Юр. адрес</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Почтовый адрес</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ИНН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>КПП</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ОГРН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Р/C</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>Банк</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>К/С</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>БИК</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Телефон</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>e-mail</td>
-                <td>email@email.com</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
+      <ul class="profile__buttons  profile-buttons">
+        <li>
+          <button class="profile-buttons__item">Мои заказы</button>
+        </li>
+        <li>
+          <button class="profile-buttons__item  js-active">Мой профиль</button>
+        </li>
+        <li>
+          <button class="profile-buttons__item">История заказов</button>
+        </li>
+      </ul>
 
-      <section class="contacts-page__representatives  representatives">
-        <div class="representatives__content">
-          <h2 class="representatives__heading">
-            Наши представители
-          </h2>
-          <div class="representatives__cards-container">
-            <ul class="representatives__list">
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-            </ul>
-            <a class="representatives__link  button" href="#">
-              Хочешь стать нашим партнером?
-            </a>
-          </div>
-        </div>
+      <section class="profile__form  checkout">
+        <form class="checkout__form">
+          <fieldset class="checkout__fieldset">
+            <legend class="checkout__legend">Личные данные</legend>
+            <p class="checkout__description">
+              Эта информация никогда не
+              будет передана третьим лицам.</p>
+            <div class="checkout__fields">
+              <span>
+                <input class="checkout__input" type="text" placeholder="Фамилия" name="last-name">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="text" placeholder="Имя" name="first-name">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="text" placeholder="Отчество" name="fathers-name">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="number" placeholder="ИНН" name="inn">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="email" placeholder="e-mail" name="email">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="tel" placeholder="Мобильный телефон" name="phone">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+            </div>
+          </fieldset>
+          <fieldset class="checkout__fieldset">
+            <legend class="checkout__legend">Адрес доставки</legend>
+            <div class="checkout__fields">
+              <span>
+                <input class="checkout__input" type="text" placeholder="Регион доставки" name="region">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="text" placeholder="Город" name="city">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="text" placeholder="Улица" name="street">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+              <span>
+                <input class="checkout__input" type="number" placeholder="Дом" name="house">
+                <button class="checkout__edit" type="button"></button>
+              </span>
+            </div>
+          </fieldset>
+        </form>
       </section>
-
     </main>
 
     <footer class="page__footer main-footer">
