--- a/source/services.html
+++ b/source/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Меркурий-Интер-Лаб: Контакты</title>
+    <title>Меркурий-Интер-Лаб: Услуги</title>
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
     <link href="img/favicon.png" rel="icon">
   </head>
@@ -284,69 +284,50 @@
       </section>
     </header>
 
-    <main class="page__contacts contacts-page">
-      <div class="contacts-page__breadcrumbs  breadcrumbs">
+    <main class="page__services page-services">
+      <div class="page-services__breadcrumbs  breadcrumbs">
         <div class="breadcrumbs__content">
           <a class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link  breadcrumbs__link--active">Контакты</a>
+          <a class="breadcrumbs__link  breadcrumbs__link--active">Услуги</a>
         </div>
       </div>
 
-      <section class="contacts-page__contacts  contacts-table">
-        <div class="contacts-table__content">
-          <h2 class="contacts-table__heading">Наши контакты</h2>
-          <table>
-            <tbody class="contacts-table__body">
-              <tr>
-                <td>Юр. адрес</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Почтовый адрес</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ИНН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>КПП</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ОГРН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Р/C</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>Банк</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>К/С</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>БИК</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Телефон</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>e-mail</td>
-                <td>email@email.com</td>
-              </tr>
-            </tbody>
-          </table>
+      <section class="page-services__services  services">
+        <div class="services__content">
+          <p class="services__description">
+            Компания «Меркурий-Интер-Лаб» занимается производством медицинской одежды более 12 лет (с 2000 года). За это время многое изменилось, в том числе и медицинская мода. Медицинская одежда сейчас — это не просто халат или костюм. Одежда для медицинских работников — это способ выразить себя, подчеркнуть свою индивидуальность. Главные требования, которые предъявляются к медицинской одежде сегодня — это практичность, комфорт и оригинальность. Мы производим одежду только из качественных материалов, что позволяет одежде сохранить прекрасный внешний вид даже после многочисленных стирок.
+          </p>
+          <p class="services__description  services__description--afterword">Помимо представленных в каталоге товаров мы готовы предоставить вам индивидуальные решения.</p>
+          <ul class="services__list">
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+            <li class="services__item">
+              <h3 class="services__item-name">Название услуги</h3>
+              <a class="services__item-link" href="#">Заказать</a>
+            </li>
+          </ul>
         </div>
       </section>
 
-      <section class="contacts-page__representatives  representatives">
+      <section class="page-services__representatives  representatives">
         <div class="representatives__content">
           <h2 class="representatives__heading">
             Наши представители
