--- a/source/sizes-help.html
+++ b/source/sizes-help.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Меркурий-Интер-Лаб: Контакты</title>
+    <title>Меркурий-Интер-Лаб: Выбор по цвету и принту</title>
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
     <link href="img/favicon.png" rel="icon">
   </head>
@@ -284,228 +284,317 @@
       </section>
     </header>
 
-    <main class="page__contacts contacts-page">
-      <div class="contacts-page__breadcrumbs  breadcrumbs">
+    <main class="page__sizes-help sizes-help">
+      <div class="sizes-help__breadcrumbs  breadcrumbs">
         <div class="breadcrumbs__content">
           <a class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link  breadcrumbs__link--active">Контакты</a>
+          <a class="breadcrumbs__link  breadcrumbs__link--active">Помощь с выбором размеров</a>
         </div>
       </div>
 
-      <section class="contacts-page__contacts  contacts-table">
-        <div class="contacts-table__content">
-          <h2 class="contacts-table__heading">Наши контакты</h2>
-          <table>
-            <tbody class="contacts-table__body">
-              <tr>
-                <td>Юр. адрес</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Почтовый адрес</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ИНН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>КПП</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ОГРН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Р/C</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>Банк</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>К/С</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>БИК</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Телефон</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>e-mail</td>
-                <td>email@email.com</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
+      <section class="sizes-help__tables  sizes-tables">
+        <div class="sizes-tables__content">
+          <h2 class="sizes-tables__heading">Помощь с выбором размеров</h2>
+          <ul class="sizes-tables__list">
+            <li class="sizes-tables__item">
+              <p class="sizes-tables__description">Классификатор размеров для женских фигур</p>
+              <div class="sizes-tables__tables">
+                <table class="sizes-tables__table-girth">
+                  <tbody>
+                    <tr>
+                      <th>Размер</th>
+                      <th>Грудь, см</th>
+                      <th>Талия, см</th>
+                      <th>Бедра, см</th>
+                    </tr>
+                    <tr>
+                      <td>40</td>
+                      <td>80</td>
+                      <td>60</td>
+                      <td>86</td>
+                    </tr>
+                    <tr>
+                      <td>42</td>
+                      <td>84</td>
+                      <td>64</td>
+                      <td>90</td>
+                    </tr>
+                    <tr>
+                      <td>44</td>
+                      <td>88</td>
+                      <td>68</td>
+                      <td>94</td>
+                    </tr>
+                    <tr>
+                      <td>46</td>
+                      <td>92</td>
+                      <td>72</td>
+                      <td>98</td>
+                    </tr>
+                    <tr>
+                      <td>48</td>
+                      <td>96</td>
+                      <td>76</td>
+                      <td>102</td>
+                    </tr>
+                    <tr>
+                      <td>50</td>
+                      <td>100</td>
+                      <td>80</td>
+                      <td>106</td>
+                    </tr>
+                    <tr>
+                      <td>52</td>
+                      <td>104</td>
+                      <td>80</td>
+                      <td>106</td>
+                    </tr>
+                    <tr>
+                      <td>54</td>
+                      <td>108</td>
+                      <td>84</td>
+                      <td>110</td>
+                    </tr>
+                    <tr>
+                      <td>56</td>
+                      <td>112</td>
+                      <td>93</td>
+                      <td>118</td>
+                    </tr>
+                    <tr>
+                      <td>58</td>
+                      <td>116</td>
+                      <td>98</td>
+                      <td>122</td>
+                    </tr>
+                    <tr>
+                      <td>60</td>
+                      <td>120</td>
+                      <td>103</td>
+                      <td>126</td>
+                    </tr>
+                    <tr>
+                      <td>62</td>
+                      <td>124</td>
+                      <td>108</td>
+                      <td>130</td>
+                    </tr>
+                    <tr>
+                      <td>64</td>
+                      <td>128</td>
+                      <td>113</td>
+                      <td>134</td>
+                    </tr>
+                    <tr>
+                      <td>66</td>
+                      <td>132</td>
+                      <td>118</td>
+                      <td>138</td>
+                    </tr>
+                  </tbody>
+                </table>
 
-      <section class="contacts-page__representatives  representatives">
-        <div class="representatives__content">
-          <h2 class="representatives__heading">
-            Наши представители
-          </h2>
-          <div class="representatives__cards-container">
-            <ul class="representatives__list">
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
+                <table class="sizes-tables__table-growth">
+                  <tbody>
                     <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
+                      <th>Рост</th>
+                      <th>Интервал, см</th>
                     </tr>
                     <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
+                      <td>I</td>
+                      <td>143-148.9</td>
                     </tr>
                     <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
+                      <td>II</td>
+                      <td>149-154.9</td>
                     </tr>
                     <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
+                      <td>III</td>
+                      <td>155-160.9</td>
                     </tr>
                     <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
+                      <td>IV</td>
+                      <td>161-166.9</td>
+                    </tr>
+                    <tr>
+                      <td>V</td>
+                      <td>167-172.9</td>
+                    </tr>
+                    <tr>
+                      <td>VI</td>
+                      <td>173-178.9</td>
+                    </tr>
+                    <tr>
+                      <td>VII</td>
+                      <td>179-184.9</td>
+                    </tr>
+                    <tr>
+                      <td>VIII</td>
+                      <td>185-190.9</td>
                     </tr>
                   </tbody>
                 </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
+              </div>
+            </li>
+            <li class="sizes-tables__item">
+              <p class="sizes-tables__description">Как определить свой размер</p>
+              <div class="sizes-tables__tables">
+                <table class="sizes-tables__table-girth">
+                  <tbody>
                     <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
+                      <th>Размер</th>
+                      <th>Грудь, см</th>
+                      <th>Талия, см</th>
+                      <th>Бедра, см</th>
                     </tr>
                     <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
+                      <td>40</td>
+                      <td>80</td>
+                      <td>60</td>
+                      <td>86</td>
                     </tr>
                     <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
+                      <td>42</td>
+                      <td>84</td>
+                      <td>64</td>
+                      <td>90</td>
+                    </tr>
+                    <tr>
+                      <td>44</td>
+                      <td>88</td>
+                      <td>68</td>
+                      <td>94</td>
+                    </tr>
+                    <tr>
+                      <td>46</td>
+                      <td>92</td>
+                      <td>72</td>
+                      <td>98</td>
+                    </tr>
+                    <tr>
+                      <td>48</td>
+                      <td>96</td>
+                      <td>76</td>
+                      <td>102</td>
+                    </tr>
+                    <tr>
+                      <td>50</td>
+                      <td>100</td>
+                      <td>80</td>
+                      <td>106</td>
+                    </tr>
+                    <tr>
+                      <td>52</td>
+                      <td>104</td>
+                      <td>80</td>
+                      <td>106</td>
+                    </tr>
+                    <tr>
+                      <td>54</td>
+                      <td>108</td>
+                      <td>84</td>
+                      <td>110</td>
+                    </tr>
+                    <tr>
+                      <td>56</td>
+                      <td>112</td>
+                      <td>93</td>
+                      <td>118</td>
+                    </tr>
+                    <tr>
+                      <td>58</td>
+                      <td>116</td>
+                      <td>98</td>
+                      <td>122</td>
+                    </tr>
+                    <tr>
+                      <td>60</td>
+                      <td>120</td>
+                      <td>103</td>
+                      <td>126</td>
+                    </tr>
+                    <tr>
+                      <td>62</td>
+                      <td>124</td>
+                      <td>108</td>
+                      <td>130</td>
+                    </tr>
+                    <tr>
+                      <td>64</td>
+                      <td>128</td>
+                      <td>113</td>
+                      <td>134</td>
+                    </tr>
+                    <tr>
+                      <td>66</td>
+                      <td>132</td>
+                      <td>118</td>
+                      <td>138</td>
                     </tr>
                   </tbody>
                 </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
+
+                <table class="sizes-tables__table-growth">
+                  <tbody>
                     <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
+                      <th>Рост</th>
+                      <th>Интервал, см</th>
                     </tr>
                     <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
+                      <td>I</td>
+                      <td>143-148.9</td>
                     </tr>
                     <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
+                      <td>II</td>
+                      <td>149-154.9</td>
                     </tr>
                     <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
+                      <td>III</td>
+                      <td>155-160.9</td>
                     </tr>
                     <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
+                      <td>IV</td>
+                      <td>161-166.9</td>
+                    </tr>
+                    <tr>
+                      <td>V</td>
+                      <td>167-172.9</td>
+                    </tr>
+                    <tr>
+                      <td>VI</td>
+                      <td>173-178.9</td>
+                    </tr>
+                    <tr>
+                      <td>VII</td>
+                      <td>179-184.9</td>
+                    </tr>
+                    <tr>
+                      <td>VIII</td>
+                      <td>185-190.9</td>
                     </tr>
                   </tbody>
                 </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-            </ul>
-            <a class="representatives__link  button" href="#">
-              Хочешь стать нашим партнером?
-            </a>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer class="page__footer main-footer">
       <address class="main-footer__contacts contacts">
