--- a/source/wholesale-clients.html
+++ b/source/wholesale-clients.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Меркурий-Интер-Лаб: Контакты</title>
+    <title>Меркурий-Интер-Лаб: Оптовым клиентам</title>
     <link href="css/style.min.css" rel="stylesheet" type="text/css">
     <link href="img/favicon.png" rel="icon">
   </head>
@@ -284,225 +284,24 @@
       </section>
     </header>
 
-    <main class="page__contacts contacts-page">
-      <div class="contacts-page__breadcrumbs  breadcrumbs">
+    <main class="page__wholesale-clients  wholesale-clients">
+      <div class="wholesale-clients__breadcrumbs  breadcrumbs">
         <div class="breadcrumbs__content">
           <a class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link  breadcrumbs__link--active">Контакты</a>
+          <a class="breadcrumbs__link  breadcrumbs__link--active">Оптовым клиентам</a>
         </div>
       </div>
 
-      <section class="contacts-page__contacts  contacts-table">
-        <div class="contacts-table__content">
-          <h2 class="contacts-table__heading">Наши контакты</h2>
-          <table>
-            <tbody class="contacts-table__body">
-              <tr>
-                <td>Юр. адрес</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Почтовый адрес</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ИНН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>КПП</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>ОГРН</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Р/C</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>Банк</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>К/С</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>БИК</td>
-                <td>45769845768937698574089</td>
-              </tr>
-              <tr>
-                <td>Телефон</td>
-                <td>45645756756765756</td>
-              </tr>
-              <tr>
-                <td>e-mail</td>
-                <td>email@email.com</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-
-      <section class="contacts-page__representatives  representatives">
-        <div class="representatives__content">
-          <h2 class="representatives__heading">
-            Наши представители
-          </h2>
-          <div class="representatives__cards-container">
-            <ul class="representatives__list">
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-              <li class="representatives__item  company-card">
-                <h3 class="company-card__heading">
-                  Название компании
-                </h3>
-                <p class="company-card__logo">
-                  <img src="img/company-card-logo.png" width="103" height="40" alt="Логотип компании">
-                </p>
-                <table>
-                  <tbody class="company-card__table">
-                    <tr>
-                      <td>Город</td>
-                      <td>Тюмень</td>
-                    </tr>
-                    <tr>
-                      <td>Адрес</td>
-                      <td>пр.Ленина, 1</td>
-                    </tr>
-                    <tr>
-                      <td>Телефон</td>
-                      <td>8-921-588-55-21</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </li>
-            </ul>
-            <a class="representatives__link  button" href="#">
-              Хочешь стать нашим партнером?
-            </a>
-          </div>
-        </div>
+      <section class="wholesale-clients__descriptions  to-wholesale-clients">
+        <h2 class="to-wholesale-clients__heading">Оптовым клиентам</h2>
+        <p class="to-wholesale-clients__description">
+          Компания «Меркурий-Интер-Лаб» занимается производством медицинской одежды более 12 лет (с 2000 года). За это время многое изменилось, в том числе и медицинская мода. Медицинская одежда сейчас — это не просто халат или костюм. Одежда для медицинских работников — это способ выразить себя, подчеркнуть
+        </p>
+        <p class="to-wholesale-clients__image">
+          <img src="img/wholesale-clients.jpg" width="290" height="184" alt="">
+        </p>
+        <p class="to-wholesale-clients__description">
+          Компания «Меркурий-Интер-Лаб» занимается производством медицинской одежды более 12 лет (с 2000 года). За это время многое изменилось, в том числе и медицинская мода. Медицинская одежда сейчас — это не просто халат или костюм. Одежда для медицинских работников — это способ выразить себя, подчеркнуть</p>
       </section>
 
     </main>
